# calculate-pi

./: .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: docker-image.yml  pytest.yml
calculate_pi/: pi.py
tests/: test_calculate_pi.py
tests/responses/: help.txt
