[tool.poetry]
name = "calculate-pi"
version = "0.1.0"
description = ""
authors = ["Erik Ferlanti <eferlanti@tacc.utexas.edu>"]
readme = "README.md"
packages = [{include = "calculate_pi"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.scripts]
calculate-pi = "calculate_pi.pi:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
addopts = "--verbose"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
