[tool.poetry]
name = "calculate-pi"
version = "0.4.0"
description = "Calculate Pi python poetry project demo"
authors = ["Erik Ferlanti <eferlanti@tacc.utexas.edu>"]
license = "BSD 3-Clause"
readme = "README.md"
repository = "https://github.com/eriksf/calculate-pi"
packages = [{include = "calculate_pi"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
click-loglevel = "^0.5.0"

[tool.poetry.scripts]
calculate-pi = "calculate_pi.pi:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.6.3"

[tool.ruff]
select = ["E", "F", "I"]
fixable = ["ALL"]
exclude = [".git", ".ruff_cache", ".vscode"]
line-length = 300

[tool.pytest.ini_options]
addopts = "--verbose --cov=calculate_pi"

[tool.poetry_bumpversion.file."calculate_pi/version.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
